# agentic-trading

./: .env.example  .gitignore  RESEARCH_NOTES.md  backtest_equity.csv  config.toml  hello.py  optimize_results.csv  pyproject.toml  strategy_config.toml
backtest/: engine.py  metrics.py
core/: calendar.py  types.py
core/strategies/: oppw_carlos.py
data/: alpaca.py  entry_prices.py  store.py  yf.py
optimize/: search.py
scripts/: ingest_backfill.py  ingest_incremental.py  ingest_universe.py  init_db.py  integrity_check.py  pull_alpaca_intraday.py  pull_yf.py  repair_gaps.py  run_backtest.py  run_optimize.py  sanity_bars.py  sanity_order.py  smoke_test.py
src/alpaca/: __init__.py  client.py
src/backtest/: __init__.py
src/core/: __init__.py  config.py  errors.py  logging.py
src/data/: __init__.py  db.py  ingest.py  integrity.py  query.py  signals.py
src/execution/: __init__.py
src/orchestrator/: __init__.py  deconflict.py  intent_persist.py  models.py  normalize.py  orchestrate.py  sizing.py  timestamp.py  universe.py  volatility.py
src/risk/: __init__.py
src/strategies/: __init__.py  base.py  context.py  registry.py  runner.py  signal.py  tqqq_weekly.py
storage/: db.py  models.py
tests/: conftest.py
tests/data/: test_signals.py
tests/golden/: tqqq_weekly_v1.0.0.json
tests/orchestrator/: test_deconflict.py  test_intent_persist.py  test_models.py  test_normalize.py  test_orchestrate.py  test_sizing.py  test_timestamp.py  test_universe.py  test_volatility.py
tests/strategies/: test_base.py  test_context.py  test_registry.py  test_runner.py  (+4 more)
